<resources>
    <string name="app_name">ShareNotes</string>
    <string name="crime_title_hint">Enter a title</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved</string>
    <string name="new_crime">New Crime</string>
    <string name="empty_list">Список пуст</string>
    <string name="crime_suspect_text">Choose Suspect</string>
    <string name="crime_report_text">Send Report</string>
    <string name="crime_report">%1$s!
        The crime was discovered on %2$s. %3%s, and %4$s</string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_suspect">There is no suspect</string>
    <string name="crime_report_suspect">The suspect is %s.</string>
    <string name="crime_report_subject">ShareNews Crime report</string>
    <string name="send_report">Send report via</string>
</resources>